# ndim

./: .gitignore  Cargo.toml  README.md
src/: cartesian.rs  lib.rs
