[package]
name = "ndim"
version = "0.0.1"
edition = "2021"

repository = "https://github.com/xdefago/ndim"
documentation = "https://docs.rs/ndim/"

authors = ["xdefago"]

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "A pure Rust library for manipulating multi-dimensional coordinates."
keywords = ["math", "geometry", "coordinates", "vector", "graphics"]
categories = ["mathematics", "graphics", "geometry", "science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = []
approx = ["dep:approx"]
experimental = [] # requires rust nightly



[dependencies]

num-traits = "0.2.15"

approx = { version = "0.5.1", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
approx = "0.5.1"
